--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "bootstrap-icons": "^1.11.3",
     "css-loader": "^7.1.2",
-    "eco-unp": "^1.0.105",
+    "eco-unp": "^1.0.108",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "style-loader": "^4.0.0",
     "unp": "^1.0.6"
   }
